# TaxaGO

./: .gitignore  Cargo.toml  README.md  build.rs  enrichment_plots.py  example_study_dmat.csv  package-lock.json  package.json
demo/: example_input_fasta.fa  user_example.csv
helper_scripts/: create_lineage.ipynb  create_vcv.R  pre_process_background.py
personal_scripts/: download_backgrounds.sh  download_goa_info.py  notebook.ipynb  pre_process_background.py
phylogenetic_trees/: archaea.nwk  bacteria.nwk  eukaryota.nwk
scripts/: build-backend.js  generate-icons.js  package-app.js
src/: lib.rs
src/analysis/: count_propagation.rs  elim_algorithm.rs  enrichment_analysis.rs  enrichment_plots.rs  handle_lineage.rs  mod.rs  multiple_testing_correction.rs  phylogenetic_meta_analysis.rs  result_combination.rs  taxonomic_weight.rs  weight_algorithm.rs  write_results.rs
src/parsers/: background_parser.rs  mod.rs  obo_parser.rs  study_parser.rs
src/utils/: common_ancestor.rs  download.rs  mod.rs  semantic_similarity.rs
