[package]
name = "TaxaGO"
version = "0.1.0"
edition = "2021"
build="build.rs"

[[bin]]
name = "taxago"
path = "src/bin/main.rs"

[[bin]]
name = "common-ancestors"
path = "src/bin/common_ancestor.rs"

[[bin]]
name = "semantic-similarity"
path = "src/bin/semantic_similarity.rs"

[dependencies]
thiserror = "2.0.11"
memmap2 = "0.9.5"
rayon = "1.10.0"
fishers_exact = "1.0.1"
adjustp = "0.1.6"
clap = { version = "4.5.28", features = ["derive"] }
lazy_static = "1.5.0"
daggy = "0.8.1"
petgraph = "0.7.1"
regex = "1.11.1"
ucfirst = "0.3.0"
dirs = "6.0.0"
statrs = "0.18.0"
csv = "1.3.1"
compact_str = "0.9.0"
jemallocator = "0.5.4"
rustc-hash = "2.1.1"

[build-dependencies]
flate2 = "1.1.0"
tar = "0.4.44"