[package]
name = "TaxaGO"
version = "0.1.0"
edition = "2021"
build="build.rs"

[[bin]]
name = "taxago"
path = "src/bin/taxago.rs"

[[bin]]
name = "taxago-interactive"
path = "src/bin/main.rs"

[[bin]]
name = "common-ancestors"
path = "src/bin/common_ancestor.rs"

[[bin]]
name = "semantic-similarity"
path = "src/bin/semantic_similarity.rs"

[dependencies]
thiserror = "2.0.12"
memmap2 = "0.9.5"
rayon = "1.10.0"
fishers_exact = "1.0.1"
adjustp = "0.1.6"
clap = { version = "4.5.37", features = ["derive", "cargo"] }
lazy_static = "1.5.0"
daggy = "0.8.1"
petgraph = "0.7.1"
regex = "1.11.1"
ucfirst = "0.3.0"
dirs = "6.0.0"
statrs = "0.18.0"
csv = "1.3.1"
compact_str = "0.9.0"
jemallocator = "0.5.4"
rustc-hash = "2.1.1"
polars = { version = "0.46.0", features = ["csv", "lazy", "is_in", "ndarray"] }
nalgebra = "0.33.2"
ndarray = "0.16.1"
rand = "0.9.1"
num_cpus = "1.13.0"
textwrap = "0.16"
plotly = { version = "0.12", features = ["kaleido", "kaleido_download"] }
itertools = "0.14.0"
strum = "0.27.1"
strum_macros = "0.27.1"
fdg = { git = "https://github.com/grantshandy/fdg.git" }
actix-web = "4.4.0"
actix-files = "0.6.2"
actix-multipart = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
time = { version = "0.3", features = ["formatting"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
ctrlc = "3.4"
webbrowser = "0.8"
futures = "0.3"
tempfile = "3.2"

[build-dependencies]
flate2 = "1.1.1"
tar = "0.4.44"